--- a/Classes/Space.html
+++ b/Classes/Space.html
@@ -19,18 +19,18 @@
 <div id='summary'>A spatial tool for Ndefs</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/Space.sc'>Space.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/Space.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/Space.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/Ndef.html">Ndef</a>, <a href="./../Classes/Pan2.html">Pan2</a>, <a href="./../Classes/PanB.html">PanB</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
 </ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-set'>set</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-arrPan'>arrPan</a> </li>
 <li class='toc3'><a href='#-clear'>clear</a> </li>
 <li class='toc3'><a href='#-define'>define</a> </li>
@@ -39,6 +39,7 @@
 <li class='toc3'><a href='#-inputArr'>inputArr</a> </li>
 <li class='toc3'><a href='#-ndefs'>ndefs</a> </li>
 <li class='toc3'><a href='#-numChannels'>numChannels</a> </li>
+<li class='toc3'><a href='#-object'>object</a> </li>
 <li class='toc3'><a href='#-objectFile'>objectFile</a> </li>
 <li class='toc3'><a href='#-play'>play</a> </li>
 <li class='toc3'><a href='#-redefine'>redefine</a> </li>
@@ -58,7 +59,7 @@
 <p>Spatial system.<tr><td class='argumentname'>panArr<td class='argumentdesc'>
 <p>Number of channels.<tr><td class='argumentname'>chanNum<td class='argumentdesc'>
 <p>An array of panning values.<tr><td class='argumentname'>play<td class='argumentdesc'>
-<p>Ndef fadeTime.</table></div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
+<p>Ndef fadeTime.</table></div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
 <div id='inheritedclassmets'></div><h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-set' href='./../Overviews/Methods.html#set'>set</a> ( <span class='argstr'>... args</span>)</h3>
 <div class='method'>
@@ -66,8 +67,8 @@
 <table class='arguments'>
 <tr><td class='argumentname'>.<td class='argumentdesc'>
 <p>Array of Ndefs to be outputed by system<tr><td class='argumentname'>(arg2)<td class='argumentdesc'>
-<p>Array of panning values</table></div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p>Array of panning values</table></div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-arrPan' href='./../Overviews/Methods.html#arrPan'>arrPan</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-clear' href='./../Overviews/Methods.html#clear'>clear</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-define' href='./../Overviews/Methods.html#define'>define</a> (<span class='argstr'>ndefArr</span>, <span class='argstr'>panArr</span>, <span class='argstr'>play: true</span>, <span class='argstr'>fadeTime</span>)</h3>
@@ -76,29 +77,29 @@
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-inputArr' href='./../Overviews/Methods.html#inputArr'>inputArr</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-ndefs' href='./../Overviews/Methods.html#ndefs'>ndefs</a> </h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-numChannels' href='./../Overviews/Methods.html#numChannels'>numChannels</a> </h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-object' href='./../Overviews/Methods.html#object'>object</a></h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-object' href='./../Overviews/Methods.html#object'>object</a> = value</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-objectFile' href='./../Overviews/Methods.html#objectFile'>objectFile</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-objectFile' href='./../Overviews/Methods.html#objectFile'>objectFile</a> = value</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-play' href='./../Overviews/Methods.html#play'>play</a> </h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-redefine' href='./../Overviews/Methods.html#redefine'>redefine</a> (<span class='argstr'>ndefArr</span>, <span class='argstr'>system: 'pan2'</span>, <span class='argstr'>panArr</span>, <span class='argstr'>chanNum</span>, <span class='argstr'>play: true</span>)</h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-setn' href='./../Overviews/Methods.html#setn'>setn</a> (<span class='argstr'>key</span>, <span class='argstr'>array</span>)</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-redefine' href='./../Overviews/Methods.html#redefine'>redefine</a> (<span class='argstr'>ndefArr</span>, <span class='argstr'>system: 'pan2'</span>, <span class='argstr'>panArr</span>, <span class='argstr'>chanNum: 2</span>, <span class='argstr'>play: true</span>)</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-setn' href='./../Overviews/Methods.html#setn'>setn</a> ( <span class='argstr'>... args</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-xset' href='./../Overviews/Methods.html#xset'>xset</a> ( <span class='argstr'>... args</span>)</h3>
-<h3 class='imethodname'><span class='methprefix'>-</span><a name='-xsetn' href='./../Overviews/Methods.html#xsetn'>xsetn</a> (<span class='argstr'>key</span>, <span class='argstr'>array</span>)</h3>
+<h3 class='imethodname'><span class='methprefix'>-</span><a name='-xsetn' href='./../Overviews/Methods.html#xsetn'>xsetn</a> ( <span class='argstr'>... args</span>)</h3>
 <h2><a class='anchor' name='examples'>Examples</a></h2>
 <pre class='code prettyprint lang-sc'>s.boot;
 
 (
-Ndef(\x, {SinOsc.ar(440,0,0.1)}).ar(1);
-Ndef(\y, {SinOsc.ar(880,0,0.1)}).ar(1);
+Ndef(\x, {SinOsc.ar(440,0,0.1)});
+Ndef(\y, {SinOsc.ar(880,0,0.1)});
 ~arr = [Ndef(\x), Ndef(\y)];
 )
 
 n = Space(~arr, \pan2, [-1,1], fadeTime: 1);
 
-s.meter;
-
 n.numChannels; //number of channels
 
-n.xsetn(\pan, Array.panDis(~arr.size, ~arr.size).scramble.postln); //evaluate several times
+n.xset(\pan, Array.panDis(~arr.size, ~arr.size).scramble.postln); //evaluate several times
 
 Ndef.all.do(_.fadeTime = 6); //set fadeTimes for all Ndefs
 
@@ -111,20 +112,22 @@ n.define(~arr, Array.panDis(~arr.size, rrand(~arr.size, ~arr.size*3)).scramble.p
 Ndef(\x, {Impulse.ar(3)});
 Ndef(\y, {Impulse.ar(7)});
 
-[\z,\x,\y].do{|i| Ndef(i, {0});};
+[\z,\x,\y].do{|i| Ndef(i, {});};
 
 [\z,\x,\y].do{|it,ind| Ndef(it, {SinOsc.ar(220*(ind+1),0,0.1)});}
 
 
 a = Array.interpolation(~arr.size,-0.5,0.5).clump(~arr.size/2);
 a.do({|item| b = b.add(item.reverse) });
-~panArr = [Array.panDis(~arr.size, ~arr.size)*pi, b.flat * pi];
+~panArr = [Array.panDis(~arr.size, ~arr.size)*pi, b.flat * pi].flop;
 
 n.redefine(~arr, \panB, ~panArr, 4); //start a new system
 
-n.reset(~arr, \pan2);
+n.redefine(~arr, \panB, ~panArr, 8); //start a new system
 
-n.ndef.numChannels;
+n.redefine(~arr, \pan2);
+
+n.numChannels;
 
 
 Ndef.clear(6);
@@ -133,44 +136,32 @@ Ndef.clear(6);
 
 s.boot;
 
-Ndef(\x, {SinOsc.ar(440,0,0.2)*0.2}).ar(1);
-Ndef(\y, {SinOsc.ar(880,0,0.2)*0.2}).ar(1);
+Ndef(\x, {SinOsc.ar(440,0,0.2)*0.2});
+Ndef(\y, {SinOsc.ar(880,0,0.2)*0.2});
 
 ~arr = [Ndef(\x), Ndef(\y)];
 
 a = Array.interpolation(~arr.size,-0.5,0.5).clump(~arr.size/2);
 a.do({|item| b = b.add(item.reverse) });
-~panArr = [Array.panDis(~arr.size, ~arr.size)*pi, b.flat * pi];
+~panArr = [Array.panDis(~arr.size, ~arr.size)*pi, b.flat * pi].flop;
 
 n = Space(~arr, \panB, ~panArr, 4, fadeTime: 2);
 
 n.numChannels;
 
-s.meter;
-
 n.xset(0, \pan0, -0.3);
 
-n.ndefs.do{|item| item.fadeTime = 2;}
+n.fadeTime(\all, 2); //set fadeTime for space class
+n.fadeTime; //print fadeTimes
 
-(
-n.xsetn(\pan0, [-0.5pi,0.5pi]); //azimuth
-n.xsetn(\pan1, [-0.25pi,0.25pi]); //elevation
-)
+n.xsetn(\pan0, [-0.5pi,0.5pi], \pan1, [-0.25pi,0.25pi]); //pairs of arg settings: azimuth, elevation
 
-(
-n.xsetn(\pan0, [0.75pi, -0.75pi]); //azimuth
-n.xsetn(\pan1, [0,0]); //elevation
-)
+n.xsetn(\pan0, [0.75pi, -0.75pi], \pan1, [0,0]); //azimuth, elevation
 
-(
-n.xsetn(\pan0, [-pi,pi]); //azimuth
-n.xsetn(\pan1, [-0.5pi,0.5pi]); //elevation
-)
+n.xsetn(\pan0, [-pi,pi], \pan1, [-0.5pi,0.5pi]); //azimuth, elevation
 
-(
-n.xsetn(\pan0, [0.5pi,-0.5pi]); //azimuth
-n.xsetn(\pan1, [0.25pi, -0.25pi]); //elevation
-)
+n.xsetn(\pan0, [0.5pi,-0.5pi], \pan1, [0.25pi, -0.25pi]); //azimuth, elevation
+
 
 Ndef.clear(1);
 
@@ -178,8 +169,8 @@ Ndef.clear(1);
 
 s.boot;
 
-Ndef(\x, {SinOsc.ar(440,0,0.2)*0.2}).ar(1);
-Ndef(\y, {SinOsc.ar(880,0,0.2)*0.2}).ar(1);
+Ndef(\x, {SinOsc.ar(440,0,0.2)*0.2});
+Ndef(\y, {SinOsc.ar(880,0,0.2)*0.2});
 
 ~arr = [Ndef(\x), Ndef(\y)];
 
@@ -188,27 +179,24 @@ n = Space(~arr, \split, [1,3], ~chanNum);
 
 n.numChannels;
 
+n.fadeTime(\all, 2);
 
-s.meter;
+n.xset(\pan, [0,2]);
 
-n.xsetn(\pan, [0,2]);
-
-n.xsetn(\pan, [1,3]);
+n.xset(\pan, [1,3]);
 
 n.define(Array.fill(~chanNum, {~arr.choose.postln}), (0..(~chanNum-1)));
 
-Ndef.clear;
+n.ndefs.do{|item| item.clear };
 
 ~chanNum = 8;
 n = Space(Array.fill(8, {~arr.choose.postln}), \split, (0..(~chanNum-1)), ~chanNum);
 
-s.meter;
-
 Ndef.all.do(_.fadeTime = 0);
 
-n.setn(\pan, (0..(~chanNum-1)).scramble);
+n.set(\pan, (0..(~chanNum-1)).scramble.postln);
 
 
 Ndef.clear;</pre>
 
-<p><div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/Space.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/Space.schelp</a><br>link::Classes/Space::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/Space.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/Space.schelp</a><br>link::Classes/Space::<br>sc version: 3.8.0</div></div></body></html>
