--- a/Computer.html
+++ b/Computer.html
@@ -22,7 +22,8 @@
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#Latest'>Latest</a></li>
-<ul class='toc'><li class='toc2'><a href='#Computer.play(Music,%20Creativity%20&%20Code)%20Event%20#2'>Computer.play(Music, Creativity &amp; Code) Event #2</a></li>
+<ul class='toc'><li class='toc2'><a href='#Computer.play%20Events'>Computer.play Events</a></li>
+<ul class='toc'></ul><li class='toc2'><a href='#Hand-in%20Reminder'>Hand-in Reminder</a></li>
 <ul class='toc'></ul></ul><li class='toc1'><a href='#Module'>Module</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#Register'>Register</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#News'>News</a></li>
@@ -30,16 +31,16 @@
 <ul class='toc'></ul><li class='toc2'><a href='#Events'>Events</a></li>
 <ul class='toc'></ul><li class='toc2'><a href='#Links'>Links</a></li>
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
-<h3><a class='anchor' name='Computer.play(Music,%20Creativity%20&%20Code)%20Event%20#2'>Computer.play(Music, Creativity &amp; Code) Event #2</a></h3>
+<h3><a class='anchor' name='Computer.play%20Events'>Computer.play Events</a></h3>
 
-<p><strong>Thursday, 30 March 2017 at 6:00pm</strong>
-<p><strong>Rymer Auditorium</strong>
-<p><strong>Department of Music</strong>
-<p><strong>University of York</strong><div class='image'><img src='http://www.federicoreuben.com/computerdotplay/media/robot_Scream.png'/></div>
-<table>
-<tr><td><strong>Computer.play</strong><td><strong>Event #2</strong><tr><td>18:00<td><em>Concert</em> with performances by:<tr><td><td>Alan Fowler<tr><td><td>Athene Broad, Kat Lovell &amp; Fizz Margereson<tr><td><td>Barrington Brook, Erin Robinson &amp; Catherine Robson</table>
+<p>Well done everyone on your performances and installations!! I was really impressed with the work you presented during the two <code class='code prettyprint lang-sc'>Computer.play</code> Events. Some really exiting and diverse work, you should be proud of what you achieved.
+<p>Well done!
+<p>Thanks,
+<p>Federico<h3><a class='anchor' name='Hand-in%20Reminder'>Hand-in Reminder</a></h3>
 
-<p><em>Computer.play(Music, Creativity &amp; Code) examines the creative potential of computer code in music and sound. The module looks at the fundamentals of computer programming, focusing on creative coding and themes related to computer music and interactivity. This event will showcase work by music students that have been exploring SuperCollider, a powerful programming language for the development of music and audio applications.</em><h2><a class='anchor' name='Module'>Module</a></h2>
+<p>The deadline for the written documentation (30%) for <code class='code prettyprint lang-sc'>Computer.play</code> is on the 18th of April by 16:00. You'll have to hand-in the work at the Music Reception in Sally Baldwin Buildings - Block D.
+<p>More details on the Written Documentation can be found here:
+<p><a href="./Assignment Brief.html">Assignment Brief</a><div class='note'><span class='notelabel'>NOTE:</span> <strong>Remember</strong>: The Written Documentation <em>"should be a critical reflection on your work, with well-developed arguments grounded on research using reliable academic sources. It should be a serious piece of writing addressing technical and aesthetic issues and should not simply be a list of things you did for the practical project."</em></div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
