--- a/Assignment Brief.html
+++ b/Assignment Brief.html
@@ -59,7 +59,7 @@
 <li>Concept/idea of project (project, written documentation)<li>Research (project, written documentation)<li>Programming skills (patch/code, written documentation)<li>Realisation and creative or research outputs (project, written documentation)<li>Project management and collaboration (project, written documentation)<li>Presentation (project, written documentation)<li>Critical evaluation (project, written documentation)</ul>
 
 <p>The work that you submit as written documentation should include:<ol>
-<li>1500 word piece of writing (printed - 2 copies). In your written documentation you should credit all of the people that were involved in the project (any collaborators), as well as any samples of music or sounds by other people that you used in your project.<li>A CD/DVD or USB drive containing the following:<ul>
+<li>1500 word piece of writing (printed - 2 copies). In your written documentation you should credit all of the people that were involved in the project (any collaborators), as well as any samples of music or sounds by other people that you used in your project.<li>CD/DVD or USB drive containing the following:<ul>
 <li>Word, Text or PDF of the written documentation.<li>Code and supporting materials (audio, video and image files, external libraries, etc.)<li>Documentation (any audio/video recordings of your performance/installation, photographs, other documentation)</ul>
 </ol>
 
