--- a/Classes/CallWindow.html
+++ b/Classes/CallWindow.html
@@ -19,20 +19,20 @@
 <div id='summary'>A call window</div>
 </div>
 <div class='subheader'>
-<div id='filename'>Source: /Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/<a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/CallWindow.sc'>CallWindow.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
+<div id='filename'>Source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/CallWindow.sc'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/Classes/CallWindow.sc</a></div><div id='superclasses'>Inherits from: <a href="../Classes/MainImprov.html">MainImprov</a> : <a href="../Classes/Object.html">Object</a></div>
 <div id='related'>See also: <a href="./../Classes/PostWindow.html">PostWindow</a>, <a href="./../Classes/Window.html">Window</a></div>
 </div>
 <div id='toc'>
 <ul class='toc'><li class='toc1'><a href='#description'>Description</a></li>
 <ul class='toc'></ul><li class='toc1'><a href='#classmethods'>Class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*new'>new</a> </li>
-<li class='toc2'><a href='#Inherited class methods'>Inherited class methods</a></li>
-<li class='toc2'><a href='#Undocumented class methods'>Undocumented class methods</a></li>
+<li class='toc2'><a href='#Inherited%20class%20methods'>Inherited class methods</a></li>
+<li class='toc2'><a href='#Undocumented%20class%20methods'>Undocumented class methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#*window'>window</a> </li>
 </ul></ul><li class='toc1'><a href='#instancemethods'>Instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-callFunc'>callFunc</a> </li>
-<li class='toc2'><a href='#Inherited instance methods'>Inherited instance methods</a></li>
-<li class='toc2'><a href='#Undocumented instance methods'>Undocumented instance methods</a></li>
+<li class='toc2'><a href='#Inherited%20instance%20methods'>Inherited instance methods</a></li>
+<li class='toc2'><a href='#Undocumented%20instance%20methods'>Undocumented instance methods</a></li>
 <ul class='toc'><li class='toc3'><a href='#-add'>add</a> </li>
 <li class='toc3'><a href='#-addAll'>addAll</a> </li>
 <li class='toc3'><a href='#-addArr'>addArr</a> </li>
@@ -66,8 +66,8 @@
 <p>A call window<h2><a class='anchor' name='classmethods'>Class Methods</a></h2>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*new' href='./../Overviews/Methods.html#new'>new</a> (<span class='argstr'>window</span>, <span class='argstr'>bounds</span>, <span class='argstr'>font</span>, <span class='argstr'>qpalette</span>, <span class='argstr'>settings</span>, <span class='argstr'>postWhere</span>, <span class='argstr'>postType</span>, <span class='argstr'>postWin</span>)</h3>
 <div class='method'>
-<p>Create a new CallWindow</div><h3><a class='anchor' name='Inherited class methods'>Inherited class methods</a></h3>
-<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented class methods'>Undocumented class methods</a></h3>
+<p>Create a new CallWindow</div><h3><a class='anchor' name='Inherited%20class%20methods'>Inherited class methods</a></h3>
+<div id='inheritedclassmets'></div><h3><a class='anchor' name='Undocumented%20class%20methods'>Undocumented class methods</a></h3>
 <h3 class='cmethodname'><span class='methprefix'>*</span><a name='*window' href='./../Overviews/Methods.html#window'>window</a> (<span class='argstr'>name: "Call Window"</span>, <span class='argstr'>bounds</span>, <span class='argstr'>font</span>, <span class='argstr'>qpalette</span>, <span class='argstr'>settings</span>, <span class='argstr'>postWhere</span>, <span class='argstr'>postType</span>, <span class='argstr'>postWin</span>)</h3>
 <h2><a class='anchor' name='instancemethods'>Instance Methods</a></h2>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-callFunc' href='./../Overviews/Methods.html#callFunc'>callFunc</a> (<span class='argstr'>string</span>, <span class='argstr'>postWin</span>, <span class='argstr'>postWhere: 'both'</span>, <span class='argstr'>postType: 'ln'</span>)</h3>
@@ -76,8 +76,8 @@
 <table class='arguments'>
 <tr><td class='argumentname'>string<td class='argumentdesc'>
 <p>String associated with a function to evaluate.<tr><td class='argumentname'>post<td class='argumentdesc'>
-<p>Boolean to determine if function gets posted in post window.</table></div><h3><a class='anchor' name='Inherited instance methods'>Inherited instance methods</a></h3>
-<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented instance methods'>Undocumented instance methods</a></h3>
+<p>Boolean to determine if function gets posted in post window.</table></div><h3><a class='anchor' name='Inherited%20instance%20methods'>Inherited instance methods</a></h3>
+<div id='inheritedinstmets'></div><h3><a class='anchor' name='Undocumented%20instance%20methods'>Undocumented instance methods</a></h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-add' href='./../Overviews/Methods.html#add'>add</a> (<span class='argstr'>cmdID: 'test'</span>, <span class='argstr'>cmdTypes</span>, <span class='argstr'>function</span>, <span class='argstr'>description: "test command"</span>, <span class='argstr'>replace: false</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addAll' href='./../Overviews/Methods.html#addAll'>addAll</a> (<span class='argstr'>arr</span>)</h3>
 <h3 class='imethodname'><span class='methprefix'>-</span><a name='-addArr' href='./../Overviews/Methods.html#addArr'>addArr</a> (<span class='argstr'>idArr</span>, <span class='argstr'>cmdTypes</span>, <span class='argstr'>function</span>, <span class='argstr'>description: "test command"</span>, <span class='argstr'>replace: false</span>)</h3>
@@ -220,4 +220,4 @@ c.viewHistory(a.last);
 
 c.playHistory(a.last);</pre>
 
-<p><div class='doclink'>source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/CallWindow.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/CallWindow.schelp</a><br>link::Classes/CallWindow::<br>sc version: 3.7.2</div></div></body></html>
+<p><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/CallWindow.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ModImprov/HelpSource/Classes/CallWindow.schelp</a><br>link::Classes/CallWindow::<br>sc version: 3.8.0</div></div></body></html>
