--- a/Computer.html
+++ b/Computer.html
@@ -33,7 +33,7 @@
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
 <h3><a class='anchor' name='Computer.play%20Events'>Computer.play Events</a></h3>
 
-<p>Well done everyone on your performances and installations!! I was really impressed with the work you presented during the two <code class='code prettyprint lang-sc'>Computer.play</code> Events. Some really exiting and diverse work, you should be proud of what you achieved.
+<p>Well done everyone on your performances and installations!! I was really impressed with the work you presented during the <code class='code prettyprint lang-sc'>Computer.play</code> Events. Some really exiting and diverse work, you should be proud of what you achieved.
 <p>Well done!
 <p>Thanks,
 <p>Federico<h3><a class='anchor' name='Hand-in%20Reminder'>Hand-in Reminder</a></h3>
