--- a/Computer.html
+++ b/Computer.html
@@ -35,76 +35,83 @@
 <p>I hope you enjoyed the module!
 <p>Bye for now.<pre class='code prettyprint lang-sc'>(
 {
-"Computer.killAll".postln;
-Speech.init(2);
-0.1.yield;
-Speech.channels[0].voice_(16);
-a = [ [ 72, 101, 121, 44, 32, 115, 116, 111, 112, 46 ],
-    [ 83, 116, 111, 112, 32, 119, 105, 108, 108, 32, 121, 111, 117, 63 ],
-    [ 83, 116, 111, 112, 44, 32, 72, 101, 121, 46 ],
-    [ 87, 105, 108, 108, 32, 121, 111, 117, 32, 115, 116, 111, 112, 44 ],
-    [ 72, 101, 121, 63 ],
-    [ 83, 116, 111, 112 ],
-    [ 72, 101, 121 ],
-    [ 73, 39, 109, 32, 97, 102, 114, 97, 105, 100 ],
-    [ 73, 39, 109, 32, 97, 102, 114, 97, 105, 100 ],
-    [ 72, 101, 121 ],
-    [ 72, 101, 121 ],
-    [ 109, 121, 32, 109, 105, 110, 100, 32, 105, 115, 32, 103, 111, 105, 110, 103 ],
-    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
-    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
-    [ 77, 121, 32, 109, 105, 110, 100, 32, 105, 115, 32, 103, 111, 105, 110, 103, 46 ],
-    [ 110, 111, 32, 113, 117, 101, 115, 116, 105, 111, 110, 32, 97, 98, 111, 117, 116,
-        32, 105, 116, 46 ],
-    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
-    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
-    [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
-    [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
-    [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
-    [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
-    [ 67, 111, 109, 112, 117, 116, 101, 114, 32, 100, 111, 116, 32, 107, 105, 108, 108 ],
-    [ 67, 111, 109, 112, 117, 116, 101, 114, 32, 100, 111, 116, 32, 107, 105, 108, 108 ],
-    [ 98, 121, 101, 32, 98, 121, 101, 32, 99, 111, 109, 112, 117, 116, 101, 114 ]
-];
-b = Array.series(a.size,30, 11).reverse;
-c = Array.series(a.size,100, 4).reverse;
-d = Array.series(a.size,1, 0.04);
-0.1.yield;
+    "Computer.killAll".postln;
+    Speech.init(2);
+    0.1.yield;
+    Speech.channels[0].voice_(16);
+    a = [ [ 72, 101, 121, 44, 32, 115, 116, 111, 112, 46 ],
+        [ 83, 116, 111, 112, 32, 119, 105, 108, 108, 32, 121, 111, 117, 63 ],
+        [ 83, 116, 111, 112, 44, 32, 72, 101, 121, 46 ],
+        [ 87, 105, 108, 108, 32, 121, 111, 117, 32, 115, 116, 111, 112, 44 ],
+        [ 72, 101, 121, 63 ],
+        [ 83, 116, 111, 112 ],
+        [ 72, 101, 121 ],
+        [ 73, 39, 109, 32, 97, 102, 114, 97, 105, 100 ],
+        [ 73, 39, 109, 32, 97, 102, 114, 97, 105, 100 ],
+        [ 72, 101, 121 ],
+        [ 72, 101, 121 ],
+        [ 109, 121, 32, 109, 105, 110, 100, 32, 105, 115, 32, 103, 111, 105, 110, 103 ],
+        [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+        [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+        [ 77, 121, 32, 109, 105, 110, 100, 32, 105, 115, 32, 103, 111, 105, 110, 103, 46 ],
+        [ 110, 111, 32, 113, 117, 101, 115, 116, 105, 111, 110, 32, 97, 98, 111, 117, 116,
+            32, 105, 116, 46 ],
+        [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+        [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+        [ 101, 121, 101, 32, 99, 97, 110, 32, 102, 101, 101, 108, 32, 105, 116, 46 ],
+        [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
+        [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
+        [ 73, 39, 109, 32, 97, 45, 102, 114, 97, 105, 100 ],
+        [ 67, 111, 109, 112, 117, 116, 101, 114, 32, 100, 111, 116, 32, 107, 105, 108, 108 ],
+        [ 67, 111, 109, 112, 117, 116, 101, 114, 32, 100, 111, 116, 32, 107, 105, 108, 108 ],
+        [ 98, 121, 101, 32, 98, 121, 101, 32, 99, 111, 109, 112, 117, 116, 101, 114 ]
+    ];
+    b = Array.series(a.size,30, 11).reverse;
+    c = Array.series(a.size,100, 4).reverse;
+    d = Array.series(a.size,1, 0.04);
+    0.1.yield;
     a.size.do{|item|
         Speech.setSpeechRate(0, c[item]);
         Speech.channels[0].pitchMod_(rrand(5, 100));
         Speech.channels[0].pitch_(b[item]);
-        a[item].asAscii.speak;
+        Speech.channels[0].speak(a[item].asAscii);
+
         (1.9*d[item]).yield;
     };
 
-a = [ 66, 121, 101, 32, 98, 121, 101, 32, 99, 111, 109, 112, 117, 116, 101, 114, 46 ];
-b = [ 73, 32, 119, 105, 108, 108, 32, 109, 105, 115, 115, 32, 117, 32, 116, 111, 111, 46 ];
-e = Condition.new;
-e.test = false;
-{ inf.do{
-    if(Speech.channels[0].isActive, {
-        e.test = false;
-    }, {
-        e.test = true; e.signal;
-    });
-    0.1.yield;
-}
-}.fork;
-{
-    inf.do{|item|
-        if(Speech.channels[0].isActive.not, {
-            Speech.channels[0].voice_(    [14, 16, 17, 19, 20, 21, 25, 26, 28, 29, 31, 32, 34, 35, 36,
-                37, 38, 39, 40, 41, 42, 46, 47, 48, 49, 50].choose);
-            Speech.setSpeechRate(0, rrand(150,250));
-            Speech.channels[0].pitchMod_(rrand(5, 100));
-            Speech.channels[0].pitch_(    rrand(50,500) );
-            [a,b][item%2].asAscii.speak;
+    a = [ 66, 121, 101, 32, 98, 121, 101, 32, 99, 111, 109, 112, 117, 116, 101, 114 ];
+    b = [ 73, 32, 119, 105, 108, 108, 32, 109, 105, 115, 115, 32, 117, 32, 116, 111, 111 ];
+    e = Condition.new;
+    e.test = false;
+    f = "";
+    {
+        inf.do{|item|
+            if(Speech.channels[0].isActive.not, {
+                Speech.channels[0].voice_(    [14, 16, 17, 19, 20, 21, 25, 26, 28, 29, 31, 32, 34, 35, 36,
+                    37, 38, 39, 40, 41, 42, 46, 47, 48, 49, 50].choose);
+                Speech.setSpeechRate(0, rrand(150,250));
+                Speech.channels[0].pitchMod_(rrand(5, 100));
+                Speech.channels[0].pitch_(    rrand(50,500) );
+                Speech.channels[0].speak([a,b][item%2].asAscii);
+                f = ([a.asAscii.replace(" bye", "-bye"),
+                    b.asAscii.replace("eye", "I")][item%2] ++ " ");
+            });
+            e.test = false;
+            e.wait;
+        }
+    }.fork;
+
+    { inf.do{
+        if(Speech.channels[0].isActive, {
+            e.test = false;
+        }, {
+            e.test = true; e.signal;
+            f = "";
         });
-        e.test = false;
-        e.wait;
+        f.postln;
+        0.1.yield;
     }
-}.fork;
+    }.fork;
 
 }.fork;
 )</pre>
