--- a/Computer.html
+++ b/Computer.html
@@ -115,7 +115,7 @@
 
 }.fork;
 )</pre>
-<div class='note'><span class='notelabel'>NOTE:</span> Unfortunately, this only works in Mac computers :(</div><h2><a class='anchor' name='Module'>Module</a></h2>
+<div class='note'><span class='notelabel'>NOTE:</span> Unfortunately, this only works on Mac computers :(</div><h2><a class='anchor' name='Module'>Module</a></h2>
 <dl>
 <dt>Module Information<dd><ul>
 <li><a href="./Handbook.html">Handbook</a><li><a href="./Handbook.html#Course%20Materials">Course Materials</a><li><a href="./Handbook.html#Module%20Overview">Module Overview</a><li><a href="./Handbook.html#Assessment">Assessment</a><li><a href="./Assignment Brief.html">Assignment Brief</a><li><a href="./moduleplan.htm">Module Plan</a></ul>
