new changes to Computer help

--- a/Computer.html
+++ b/Computer.html
@@ -32,8 +32,8 @@
 <ul class='toc'></ul></ul></ul></div><h2><a class='anchor' name='Latest'>Latest</a></h2>
 <h3><a class='anchor' name='Bye-bye%20Computer'>Bye-bye Computer</a></h3>
 
-<p>I hope you enjoyed the module!
-<p>Bye for now.<pre class='code prettyprint lang-sc'>(
+<p>I hope you enjoyed the module!<pre class='code prettyprint lang-sc'>(
+//words partly based on 2001: A Space Odyssey
 {
     "Computer.killAll".postln;
     Speech.init(2);
@@ -139,10 +139,7 @@
 
 <p><code class='code prettyprint lang-sc'>Computer.play</code> related news, announcements, events, concerts, talks, links, etc:<h3><a class='anchor' name='Talks'>Talks</a></h3>
 
-<p>18/03/2017 <a href="https://www.mstrcyork.org/events/event/research-seminar-john-murray/">Research Seminar: John Murray</a>
 <p>26/04/2017 <a href="https://www.mstrcyork.org/people/jez-wells/">Research Seminar: Jez Wells</a><h3><a class='anchor' name='Events'>Events</a></h3>
-
-<p>19/03/2017 Mainwaring/Reuben Duo, Tech Wednesday, Old Red Bus Station, Leeds<pre class='code prettyprint lang-sc'>Computer.url("https://www.facebook.com/TheOldRedBusStation/")</pre>
 
 <p>28/03/2017 Algorave, ODI Leeds, Leeds<pre class='code prettyprint lang-sc'>Computer.url("https://algorave.com/");</pre>
 
