change to code for fun

--- a/Code Examples/Code for Fun.html
+++ b/Code Examples/Code for Fun.html
@@ -727,4 +727,4 @@ CombN.ar(LPF.ar(LFNoise0.ar(MouseX.kr([300,2200])*[1,1.1],LFPulse.kr(1,0,0.3,0.1
     });
 }.play;
 )</pre>
-<div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Code Examples/Code for Fun.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Code Examples/Code for Fun.schelp</a><br>link::Code Examples/Code for Fun::<br>sc version: 3.8.0</div></div></body></html>
+<div class='note'><span class='notelabel'>NOTE:</span> This examples are taken from the SC documentation by James McCartney and others.</div><div class='doclink'>helpfile source: <a href='file:///Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Code Examples/Code for Fun.schelp'>/Users/federicoreuben/Library/Application Support/SuperCollider/Extensions/ComputerPlay/HelpSource/Code Examples/Code for Fun.schelp</a><br>link::Code Examples/Code for Fun::<br>sc version: 3.8.0</div></div></body></html>
